# lio_slam

./: .gitignore  CMakeLists.txt  README.md  cmake_thirdparty.sh  package.xml
cmake/: packages.cmake
config/: lio.yaml  mapping.yaml
include/: globaldefine.hh
include/common/: eigen_types.hh  math_utils.hh  navi_state.hh
include/eskf/: eskf.hpp
include/ieskf/: ieskf.hh  ieskf.hpp
include/lidar/: avia_process.hh  lidar_process_interface.hh
include/map/: local_map.hh
include/math/: SO3.hpp  math.hpp
include/modules/: module_base.hh  propagate.hh
include/modules/frontend/: frontend.hh  lio_zh_model.hh
include/ros_wrapper/: frontend_ros_wrapper.hh
include/sensors/: common_head.hh  gnss.hh  imu.hh  odom.hh  point_types.hh
include/type/: imu.hh  measure_group.hh  point.hh  pointcloud.hh  pose.hh  timestamped.hh
include/utils/: lidar_utils.hh
launch/: lio.launch
rviz/: lio.rviz  mapping.rviz
src/: map_builder_node.cc
src/app/: ieskf_node.cc  main_node.cc
src/ceres_pose_graph/: out_pose.txt  plot_result.py  pose_graph_3d.cc  pose_graph_3d_err_term.hh  read_g2o_data.cc  read_g2o_data.hpp  types.hh
src/common/: timer.cc  timer.hh
src/frontend/: frontend.cc
src/ieskf/: ieskf.cc
src/ieskf_fastlio/: ieskf_fastlio.cc  ieskf_fastlio.hh
src/lidar_factor/: analytical_factor.cc  analytical_factor.hh  lidar_factor.hh  pose_parameterization.cc  pose_parameterization.hh
src/lidar_process/: lidar_process.cc  lidar_process.hh
src/lio/: iglio_builder.cc  iglio_builder.hh  imu_process.cc  imu_process.hh  lidar_odom.cc  lidar_odom.hh  lio_utils.cc  lio_utils.hh
src/loopclosure/: loopclosure.cc  loopclosure.hh  loopclosure_uitls.hpp
src/map/: local_map.cc
src/mapping/: map_builder_ros.cc  map_builder_ros.hh
src/modules/: propagate.cc
src/modules/frontend/: frontend.cc
src/ros_wrapper/: frontend_ros_wrapper.cc
src/state/: eskf.hpp  navi_state.hh  static_imu_init.cc  static_imu_init.hh
src/timer/: tic_toc.hh  timer.hh
src/tools/: lidar_utils.hpp  tool_color_printf.hpp
src/utils/: lio_utils.hh
src/voxel/: voxel_map.hpp
src/voxel_map/: voxel_map.cc  voxel_map.hh
srv/: SaveMap.srv
test/: lidar_process_test.cc  static_imu_test.cc  test_eskf.cc  test_factor.cc
